Story 1.17, review: the pairs and the toggles bound tighter, and six citations read at the tag
The fairness review found no leak and asked for changes; the blind, edge-case and
verification-gap reviews added theirs. Taken:

- The item pair puts all three families on heaps and identifies all three in its control, and
  restores the swapped labels. The unseen mob's pair goes on to its health, its state, its enemy
  and a buff. The hidden-trap pair holds the trap's name absent and the cleared cell unchanged.
  The generator pair holds the stack's depth across a read, not only the top generator's position.
- Blindness now loses a mob and a gas placed in view outside the block, so the actors and blobs
  clauses are exercised rather than allowed; the diff is held to exactly its five parts. The log's
  cap is asserted before its lines are compared. The announcement is cited where the log line comes
  from, the hero's add and the buff's heroMessage, not the announced flag, which is the floating
  text over the sprite.
- Mind vision holds both directions of each rule on the game's array: every discoverable cell
  within the radius is in view, and every cell around a mob the sighted view did not reach. The
  mimic it skips is the game's own predicate, a stealthy neutral one. The heaps are held to exactly
  the seen ones on known cells, and a trap or way down newly drawn to a cell unknown before.
- Magic mapping pins the exit absent before and requires the transitions to move; a heap on a
  merely mapped cell is shown to exist and not be drawn; the allowed set is named for what it is,
  the parts this seed's turn moves.
- ObservationDiff compares the hero by named accessors, so a reordered record cannot fool it, and
  says which ObserveTest case makes the Actions a function of the rest.
- Citations at v4.0.0: the sprite's visibility (GameScene.java:1089, :1515-1522; Char.java:1322-1324),
  the secret door's visual (DungeonTileSheet.java:261, :470), the log line (Hero.java:2130